# AmeliaScenes

./: .gitignore  DATASET.md  INSTALL.md  README.md  install.sh  pyproject.toml  setup.py
amelia/scenes/: ceate_splits.py  run_interaction.py  run_processor.py
amelia/scenes/processing/: full_processor.py  scene_meta_processor.py  (+1 more)
amelia/viz/: common.py  context.py  marginal_predictions.py
amelia_scenes/: check_csv.py  critical_analysis.py  run_all.py  run_ceate_splits.py  run_create_splits.py  run_individual.py  run_interaction.py  run_processor.py  viz_characterization.py  viz_percentile_scenes.py  viz_scenes.py  viz_scores_pdf.py
amelia_scenes/conf/: processor_conf.yaml
amelia_scenes/processing/: full_processor.py  scene_meta_processor.py  scene_processor.py
amelia_scenes/scene_processing/: run_processor.py
amelia_scenes/scene_scoring/: run_all.py  run_individual.py  run_interaction.py
amelia_scenes/scene_splitting/: ceate_splits.py
amelia_scenes/scoring/: AmeliaBenchmark.code-workspace  crowdedness.py  interactive.py  kinematic.py  scores.py
amelia_scenes/splitting/: dataset.py
amelia_scenes/utils/: common.py  dataset.py  global_masks.py  transform_utils.py
amelia_scenes/visualization/: benchmark_viz.py  collision.py  common.py  context.py  joint_predictions.py  marginal_predictions.py  scene_viz.py  scoring_viz.py
scenes/processing/: run_processor.py
scenes/scoring/: run_interaction.py
scenes/splitting/: ceate_splits.py
scenes/utils/: dataset.py
scripts/: aws_sync.sh  psc_sync.sh  run_all.sh  run_processor.sbatch  run_vizualizations.sh
(+25 files in other folders)
