[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "amelia_scenes"
version = "1.0.0"
description = "Tool for creating scenes from CSV data and characterizing scenarios."
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.9, <4.0"
dependencies = [
    "easydict==1.10",
    "joblib==1.2.0",
    "networkx==3.1",
    "numpy==1.21.2",
    "opencv-python==4.7.0.72",
    "pandas==2.0.3",
    "python-dateutil==2.9.0",
    "pytz==2024.1",
    "shapely==2.0.3",
    "six==1.16.0",
    "tqdm==4.65.0",
    "tzdata==2024.1",
    "natsort==8.3.1",
    "imageio==2.34.0",
    "matplotlib==3.7.1",
    "scipy==1.9.1",
    "pyproj==3.6.1",
]

authors = [
    {name = "Ingrid Navarro"},
    {name = "Pablo Ortega"},
    {name = "Jay Patrikar"},
    {name = "Haichuan Wang"},
    {name = "Jong Hoon Park"},
]


[tool.setuptools]
packages = ["amelia_scenes", "amelia_scenes.processing", "amelia_scenes.scoring", "amelia_scenes.utils", "amelia_scenes.visualization"]


[project.urls]
Repository = "https://github.com/AmeliaCMU/AmeliaScenes"
Homepage = "https://ameliacmu.github.io"